# conda-workspaces

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  _write_tests.py  pyproject.toml
.github/workflows/: docs.yml  release.yml  tests.yml
conda_workspaces/: __init__.py  __main__.py  cache.py  context.py  env_export.py  env_spec.py  envs.py  exceptions.py  export.py  graph.py  lockfile.py  models.py  plugin.py  resolver.py  runner.py  template.py
conda_workspaces/cli/: __init__.py  activate.py  add.py  clean.py  info.py  init.py  install.py  list.py  lock.py  main.py  remove.py  run.py  shell.py  status.py
conda_workspaces/cli/task/: __init__.py  add.py  export.py  list.py  remove.py  run.py
conda_workspaces/cli/workspace/: __init__.py  _common.py  activate.py  add.py  clean.py  export.py  import_manifest.py  info.py  init.py  install.py  list.py  lock.py  quickstart.py  remove.py  run.py  shell.py  sync.py
conda_workspaces/importers/: __init__.py  anaconda_project.py  base.py  conda_project.py  environment_yml.py  pixi_toml.py  pyproject_toml.py  serialize.py
conda_workspaces/manifests/: base.py  pixi_toml.py  pyproject_toml.py  toml.py
conda_workspaces/parsers/: __init__.py  base.py  normalize.py  pixi_toml.py  pyproject_toml.py  toml.py
demos/: README.md  _settings.tape  caching.tape  ci-split.tape  depends-on.tape  ecosystem.tape  export.tape  import.tape  lockfile.tape  multi-env.tape  multi-platform.tape  pixi-compat.tape  platform-overrides.tape  quickstart.tape  shell.tape  task-pixi-compat.tape  task-quickstart.tape  templates.tape
demos/fixtures/: ecosystem.toml  import-ap.yml  import-env.yml  lockfile.toml  multi-env.toml  multi-platform.toml  pixi-compat.toml  shell.toml
docs/: changelog.md  conf.py  configuration.md  features.md  index.md  motivation.md  quickstart.md  robots.txt
docs/_static/css/: custom.css
docs/reference/: api.md  cli.md  conda-toml-spec.md  format-aliases.md
docs/reference/api/: context.md  environments.md  execution.md  manifests.md  models.md  parsers.md  resolver.md
docs/tutorials/: ci-pipeline.md  coming-from-pixi.md  first-project.md  index.md
docs/tutorials/coming-from/: anaconda-project.md  conda-project.md  conda.md  index.md  pixi.md
recipe/: recipe.yaml
schema/: conda-toml-1.schema.json
tests/: conftest.py  test___main__.py  test_cache.py  test_context.py  test_env_export.py  test_env_spec.py  test_envs.py  test_exceptions.py  test_export.py  test_graph.py  test_integration.py  test_lockfile.py  test_models.py  test_plugin.py  test_resolver.py  test_runner.py  test_template.py
tests/cli/: conftest.py  test_activate.py  test_add_remove.py  test_clean.py  test_info.py  test_init.py  test_install.py  test_list.py  test_lock.py  test_main.py  test_run.py  test_shell.py  test_status.py
tests/cli/task/: test_add.py  test_export.py  test_list.py  test_parser.py  test_remove.py  test_run.py
tests/cli/workspace/: test_activate.py  test_add_remove.py  test_clean.py  test_export.py  test_import.py  test_info.py  test_init.py  test_install.py  test_list.py  test_lock.py  test_quickstart.py  test_run.py  test_shell.py  test_sync.py
tests/manifests/: test_detection.py  test_exporter.py  test_normalize.py  test_pixi_toml.py  test_pyproject_toml.py  test_task_add_remove.py  test_task_pixi_toml.py  test_task_pyproject_toml.py  test_task_toml.py  test_toml.py
tests/parsers/: conftest.py  test_detection.py  test_normalize.py  test_pixi_toml.py  test_pyproject_toml.py  test_task_pixi_toml.py  test_task_pyproject_toml.py  test_task_toml.py  test_toml.py
