[build-system]
requires = ["hatchling>=1.12.2", "hatch-vcs>=0.2.0"]
build-backend = "hatchling.build"

[project]
name = "conda-workspaces"
description = "Project-scoped multi-environment workspace management for conda, with pixi compatibility"
requires-python = ">=3.10"
readme = "README.md"
license = "BSD-3-Clause"
classifiers = [
  "Operating System :: OS Independent",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  # conda itself is not on PyPI; installed via conda
  # "conda >=24.7",
  # conda-lockfiles provides rattler-lock v6 parsing and record helpers
  # "conda-lockfiles >=0.1",
  # conda-spawn provides shell spawning for `cw shell`
  # "conda-spawn >=0.0.5",
  "tomlkit >=0.13",
  "platformdirs >=3.0",
]
dynamic = ["version"]

[project.urls]
documentation = "https://conda-incubator.github.io/conda-workspaces"
repository = "https://github.com/conda-incubator/conda-workspaces"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "conda_workspaces/_version.py"

[project.scripts]
cw = "conda_workspaces.__main__:main"

[project.entry-points.conda]
"conda-workspaces" = "conda_workspaces.plugin"

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
omit = ["conda_workspaces/_version.py"]
show_missing = true
skip_covered = true
sort = "Miss"

[tool.coverage.run]
source = ["conda_workspaces"]
branch = true

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
flake8-type-checking = {exempt-modules = [], strict = true}
select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "FA",   # flake8-future-annotations
  "I",    # isort
  "ISC",  # flake8-implicit-str-concat
  "RUF100",  # unused noqa directive
  "T10",  # flake8-debugger
  "TCH",  # flake8-type-checking
  "UP",   # pyupgrade
  "W",    # pycodestyle warnings
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ty.environment]
python-version = "3.10"

# ---------------------------------------------------------------------------
# pixi workspace (used for development)
# ---------------------------------------------------------------------------

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64", "linux-aarch64"]

[tool.pixi.dependencies]
python = ">=3.10"
conda = ">=24.7"
conda-lockfiles = ">=0.1"
conda-spawn = ">=0.0.5"

[tool.pixi.pypi-dependencies]
conda-workspaces = { path = ".", editable = true }

[tool.pixi.feature.dev.dependencies]
ruff = ">=0.9"
ty = ">=0.0.1a7"
pre-commit = ">=4.0"

[tool.pixi.feature.test.dependencies]
pytest = ">=8.0"
pytest-cov = ">=4.0"
tomlkit = ">=0.13"
platformdirs = ">=3.0"

[tool.pixi.feature.docs.dependencies]
sphinx = ">=7.0"
conda-sphinx-theme = ">=0.2"
myst-parser = ">=3.0"
sphinx-design = ">=0.6"
sphinx-copybutton = ">=0.5"
sphinx-reredirects = ">=0.1"
sphinx-sitemap = ">=2.5"
sphinx-argparse = ">=0.4"

[tool.pixi.environments]
dev = {features = ["dev"], solve-group = "default"}
test = {features = ["test"], solve-group = "default"}
docs = {features = ["docs"], solve-group = "default"}

[tool.pixi.tasks]
lint = "ruff check conda_workspaces tests"
format = "ruff format conda_workspaces tests"
format-check = "ruff format --check conda_workspaces tests"
typecheck = "ty check conda_workspaces"
test = "pytest"
test-cov = "pytest --cov --cov-report=term-missing --cov-report=html"
docs = "sphinx-build -b dirhtml docs docs/_build/dirhtml"
