[build-system]
requires = ["hatchling>=1.12.2", "hatch-vcs>=0.2.0"]
build-backend = "hatchling.build"

[project]
name = "conda-workspaces"
description = "Project-scoped multi-environment workspace management for conda, with pixi compatibility"
requires-python = ">=3.10"
readme = "README.md"
license = "BSD-3-Clause"
classifiers = [
  "Operating System :: OS Independent",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  # These are required but only available via conda, not PyPI:
  # "conda >=24.7",
  # "conda-lockfiles >=0.1.1",  # shares rattler-lock v6 schema with conda.lock
  # "conda-spawn >=0.1.0",
  #
  # These are optional (gracefully skipped when absent):
  # "conda-pypi >=0.5.0",         # PyPI dependency support
  # "conda-rattler-solver >=0.0.6",  # solver backend for PyPI deps
  "jinja2 >=3.0",
  "packaging >=21.0",
  "platformdirs >=3.0",
  "rich >=13.0",
  "tomlkit >=0.13",
]
# TODO: bump conda-lockfiles to the first release that ships the public
# `rattler_lock_v6_to_conda_env` + `RattlerLockV6` pydantic model (added
# in conda-incubator/conda-lockfiles#128) so we can drop the private
# `_rattler_lock_v6_to_env` call in `conda_workspaces.lockfile`.
dynamic = ["version"]

[project.urls]
documentation = "https://conda-incubator.github.io/conda-workspaces"
repository = "https://github.com/conda-incubator/conda-workspaces"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "conda_workspaces/_version.py"

[project.scripts]
cw = "conda_workspaces.__main__:main"
ct = "conda_workspaces.__main__:main_task"

[project.entry-points.conda]
"conda-workspaces" = "conda_workspaces.plugin"

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
omit = ["conda_workspaces/_version.py"]
show_missing = true
skip_covered = true
sort = "Miss"

[tool.coverage.run]
source = ["conda_workspaces"]
branch = true

[tool.ruff]
target-version = "py310"
exclude = ["conda_workspaces/_version.py"]

[tool.ruff.lint]
flake8-type-checking = {exempt-modules = [], strict = true}
select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "FA",   # flake8-future-annotations
  "I",    # isort
  "ISC",  # flake8-implicit-str-concat
  "RUF100",  # unused noqa directive
  "T10",  # flake8-debugger
  "TCH",  # flake8-type-checking
  "UP",   # pyupgrade
  "W",    # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"]  # pytest_plugins must precede imports

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -v"
markers = ["integration: end-to-end workflow tests"]

[tool.ty.environment]
python-version = "3.10"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64", "linux-aarch64"]

[tool.pixi.dependencies]
python = ">=3.10"
conda = ">=24.7"
conda-lockfiles = ">=0.1.1"
conda-pypi = ">=0.5.0"
conda-rattler-solver = ">=0.0.6"
conda-spawn = ">=0.1.0"

[tool.pixi.pypi-dependencies]
conda-workspaces = { path = ".", editable = true }

[tool.pixi.feature.dev.dependencies]
ruff = ">=0.9"
ty = ">=0.0.1a7"
pre-commit = ">=4.0"

[tool.pixi.feature.test.dependencies]
pytest = ">=8.0"
pytest-cov = ">=4.0"
tomlkit = ">=0.13"
platformdirs = ">=3.0"

[tool.pixi.feature.docs.dependencies]
sphinx = ">=7.0"
conda-sphinx-theme = ">=0.2"
myst-parser = ">=3.0"
sphinx-design = ">=0.6"
sphinx-copybutton = ">=0.5"
sphinx-reredirects = ">=0.1"
sphinx-sitemap = ">=2.5"
sphinx-argparse = ">=0.4"

[tool.pixi.environments]
dev = {features = ["dev"], solve-group = "default"}
test = {features = ["test"], solve-group = "default"}
docs = {features = ["docs"], solve-group = "default"}

[tool.pixi.tasks]
lint = { cmd = "ruff check conda_workspaces tests", description = "Check code style" }
format = { cmd = "ruff format conda_workspaces tests", description = "Auto-format code" }
format-check = { cmd = "ruff format --check conda_workspaces tests", description = "Verify formatting" }
typecheck = { cmd = "ty check conda_workspaces", description = "Run type checker" }
test = { cmd = "pytest", description = "Run test suite" }
test-cov = { cmd = "pytest --cov --cov-report=term-missing --cov-report=html --cov-report=xml", description = "Tests with coverage" }
docs = { cmd = "sphinx-build -b dirhtml docs docs/_build/dirhtml", description = "Build documentation" }

[tool.pixi.tasks.check]
depends-on = ["lint", "format-check", "typecheck"]
description = "Run all checks"

[tool.pixi.tasks.demos]
cmd = """bash -c 'if [ -n "$1" ]; then vhs "demos/$1.tape"; else for tape in demos/*.tape; do [[ "$(basename "$tape")" == _* ]] && continue; vhs "$tape"; done; fi' -- {{ name }}"""
args = [{ arg = "name", default = "" }]
description = "Record demo GIFs"
